kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-sandbox
  namespace: plane-sandbox
  labels:
    app: plane-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plane-sandbox
  template:
    metadata:
      labels:
        app: plane-sandbox
    spec:
      containers:
      - name: planefrontend
        image: makeplane/plane-frontend:0.2.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        command: ["/bin/sh","-c"]
        args: ["node apps/app/server.js"]
        ports:
         - containerPort: 3000
      - name: planebackend
        image: makeplane/plane-backend:0.2.1
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh","-c"]
        args: ["./bin/takeoff"]
        resources:
          limits:
            memory: 1Gi
            cpu: "1"
          requests:
            memory: 1Gi
            cpu: "0.2"
        ports:
         - containerPort: 8000
