kubernetes/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane
  namespace: plane-sandbox
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-0b95f47db683daaeb,eipalloc-0113ae1793232614c,eipalloc-09a1830c7d2a29f87"
spec:
  selector:
    app: plane-sandbox
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: LoadBalancer
